--- a/RickAndMorty/src/index.html
+++ b/RickAndMorty/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
   <meta charset="utf-8">
   <title>Desafio</title>
   <base href="/">
