--- a/RickAndMorty/src/index.html
+++ b/RickAndMorty/src/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+<head>  
   <meta charset="utf-8">
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
   <title>Desafio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css"
 </head>
 <body class="mat-typography">
   <app-root></app-root>
